data-structures&algorithms/Project3/CurrentErrors
In file included from graph.cpp:12:
graph.h:12:9: error: ‘Vertex’ does not name a type
   12 |         Vertex* from;
      |         ^~~~~~
graph.h:13:9: error: ‘Vertex’ does not name a type
   13 |         Vertex* to;
      |         ^~~~~~
graph.h:21:9: error: ‘Color’ does not name a type
   21 |         Color color;
      |         ^~~~~
graph.cpp: In member function ‘void Graph::addEdge(Edge*)’:
graph.cpp:24:23: error: ‘Edge’ {aka ‘struct Edge’} has no member named ‘fro
’
   24 |         adjList[edge->from].push_back({edge->to, edge->distance});
      |                       ^~~~
graph.cpp:24:46: error: ‘Edge’ {aka ‘struct Edge’} has no member named ‘to’
   24 |         adjList[edge->from].push_back({edge->to, edge->distance});
      |                                              ^~
graph.cpp:25:23: error: ‘Edge’ {aka ‘struct Edge’} has no member named ‘to’
   25 |         adjList[edge->to].push_back({edge->from, edge->distance});
      |                       ^~
graph.cpp:25:44: error: ‘Edge’ {aka ‘struct Edge’} has no member named ‘fro
’
   25 |         adjList[edge->to].push_back({edge->from, edge->distance});
      |                                            ^~~~
graph.cpp: In member function ‘void Graph::BFS(Vertex*)’:
graph.cpp:34:27: error: ‘struct Vertex’ has no member named ‘color’
   34 |                 i->first->color = WHITE;
      |                           ^~~~~
graph.cpp:40:17: error: ‘Vertex’ {aka ‘struct Vertex’} has no member named
color’
   40 |         source->color = GRAY;
      |                 ^~~~~
graph.cpp:52:31: error: ‘Vertex’ {aka ‘struct Vertex’} has no member named
color’
   52 |                         if(v->color == WHITE){
      |                               ^~~~~
graph.cpp:53:36: error: ‘Vertex’ {aka ‘struct Vertex’} has no member named
color’
   53 |                                 v->color = GRAY;
      |                                    ^~~~~
graph.cpp:59:20: error: ‘struct Vertex’ has no member named ‘color’
   59 |                 u->color = BLACK;
      |                    ^~~~~
graph.cpp: In member function ‘void Graph::print_path(std::string, std::string)’:
graph.cpp:72:22: error: ‘struct std::_Rb_tree_iterator<std::pair<Vertex* const, std::__cxx11::list<std::pair<Vertex*, int> > > >’ has no member named ‘first’
   72 |                 if(p.first->name == from){
      |                      ^~~~~
graph.cpp:73:35: error: ‘struct std::_Rb_tree_iterator<std::pair<Vertex* const, std::__cxx11::list<std::pair<Vertex*, int> > > >’ has no member named ‘first’
   73 |                         fromV = p.first;
      |                                   ^~~~~
graph.cpp:75:22: error: ‘struct std::_Rb_tree_iterator<std::pair<Vertex* const, std::__cxx11::list<std::pair<Vertex*, int> > > >’ has no member named ‘first’
   75 |                 if(p.first->name == to){
      |                      ^~~~~
graph.cpp:76:33: error: ‘struct std::_Rb_tree_iterator<std::pair<Vertex* const, std::__cxx11::list<std::pair<Vertex*, int> > > >’ has no member named ‘first’
   76 |                         toV = p.first;
      |                                 ^~~~~
graph.cpp:87:36: error: base operand of ‘->’ has non-pointer type ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’}
   87 |                 print_path(from, to->parent->name);
      |                                    ^~
In file included from main.cpp:13:
graph.h:12:9: error: ‘Vertex’ does not name a type
   12 |         Vertex* from;
      |         ^~~~~~
graph.h:13:9: error: ‘Vertex’ does not name a type
   13 |         Vertex* to;
      |         ^~~~~~
graph.h:21:9: error: ‘Color’ does not name a type
   21 |         Color color;
      |         ^~~~~
main.cpp: In function ‘int main(int, char**)’:
main.cpp:51:67: error: no match for ‘operator[]’ (operand types are ‘char**’ and ‘std::ifstream’ {aka ‘std::basic_ifstream<char>’})
   51 |       cout << "Warning: cannot open file named " << argv[vertices_file] << "!" << endl;
      |                                                         ^

main.cpp:51:67: note: candidate: ‘operator[](char**, long int)’ (built-in)
main.cpp:51:67: note:   no known conversion for argument 2 from ‘std::ifstream’ {aka ‘std::basic_ifstream<char>’} to ‘long int’
main.cpp:104:23: error: ‘Edge’ {aka ‘struct Edge’} has no member named ‘fro
’
  104 |                 info->from->name = tempString;
      |                       ^~~~
main.cpp:108:23: error: ‘Edge’ {aka ‘struct Edge’} has no member named ‘to’
  108 |                 info->to->name = tempString;
      |                       ^~
main.cpp:123:15: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘Vertex*’
  123 |         g.BFS(from);
      |               ^~~~
      |               |
      |               std::string {aka std::__cxx11::basic_string<char>}
In file included from main.cpp:13:
graph.h:43:34: note:   initializing argument 1 of ‘void Graph::BFS(Vertex*)’
   43 |                 void BFS(Vertex* source);
      |                          ~~~~~~~~^~~~~~
graph.h:12:9: error: ‘Vertex’ does not name a type
   12 |         Vertex* from;
      |         ^~~~~~
graph.h:13:9: error: ‘Vertex’ does not name a type
   13 |         Vertex* to;
      |         ^~~~~~
graph.h:21:9: error: ‘Color’ does not name a type
   21 |         Color color;
      |
